--- a/.github/workflows/build-yourproject.yml
+++ b/.github/workflows/build-yourproject.yml
@@ -30,3 +30,9 @@ jobs:
       - name: List files in the repository
         run: |
           ls -la ${{ github.workspace }}
+      
+      - name: Publish Test Report
+      if: ${{ always() }}
+      uses: ScaCap/action-surefire-report@v1.2.0
+      with:
+        check_name: JUnit Test Results
